--- a/app/src/main/res/layout/show_camera.xml
+++ b/app/src/main/res/layout/show_camera.xml
@@ -1,15 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     xmlns:opencv = "http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
     <org.opencv.android.JavaCameraView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:visibility="gone"
         android:id="@+id/show_camera_activity_java_surface_view"
         opencv:show_fps="false"
         opencv:camera_id="any"/>
 
-</LinearLayout>
+    <Button
+        android:id="@+id/settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="settingsClicked"
+        android:text="Settings"
+        android:layout_gravity="left"/>
+
+    <TextView
+        android:id="@+id/backgroundText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/show_camera_activity_java_surface_view"
+        android:layout_alignParentBottom="true"
+        android:text="BackGround Color" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:prompt="@string/backgroundOptionsName"
+        android:entries="@array/backgroundColorFilterNames"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/backgroundText"
+        android:layout_alignParentBottom="true" />
+
+    <TextView
+        android:id="@+id/textColorText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@id/spinner"
+        android:text="Text Color" />
+
+    <Spinner
+        android:id="@+id/spinner_text"
+        android:prompt="@string/backgroundOptionsName"
+        android:entries="@array/textColorFilterNames"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@id/textColorText"/>
+
+
+
+
+
+</RelativeLayout>
