--- a/app/src/main/res/layout/show_camera.xml
+++ b/app/src/main/res/layout/show_camera.xml
@@ -4,7 +4,7 @@
     xmlns:opencv = "http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
-    <org.opencv.android.JavaCameraView
+    <com.gettingstarted.erik.tfg_appdiscvisual.ZoomCameraView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
@@ -12,59 +12,60 @@
         opencv:show_fps="false"
         opencv:camera_id="any"/>
 
-    <Button
-        android:id="@+id/settingsButton"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/settingsButton"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:onClick="settingsClicked"
+            android:text="Settings"
+            android:layout_gravity="left"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/backgroundText"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_toRightOf="@id/settingsButton"
+            android:layout_alignParentTop="true"
+            android:text="BackGround Color"
+            android:background="@color/darkGray"
+            android:layout_weight="1"
+            android:gravity="center"/>
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:prompt="@string/backgroundOptionsName"
+            android:entries="@array/backgroundColorFilterNames"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_toRightOf="@id/backgroundText"
+            android:layout_alignParentTop="true"
+            android:background="@color/darkGray"
+            android:layout_weight="1"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/colorDetection"
+            android:text="Color Detection"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@id/spinner"
+            android:onClick="colorDetectionClicked"
+            android:layout_weight="1"/>
+
+
+    </LinearLayout>
+
+
+    <SeekBar
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="settingsClicked"
-        android:text="Settings"
-        android:layout_gravity="left"/>
-
-    <TextView
-        android:id="@+id/backgroundText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/show_camera_activity_java_surface_view"
-        android:layout_alignParentBottom="true"
-        android:text="BackGround Color" />
-
-    <Spinner
-        android:id="@+id/spinner"
-        android:prompt="@string/backgroundOptionsName"
-        android:entries="@array/backgroundColorFilterNames"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/backgroundText"
-        android:layout_alignParentBottom="true" />
-
-    <TextView
-        android:id="@+id/textColorText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@id/spinner"
-        android:text="Text Color" />
-
-    <Spinner
-        android:id="@+id/spinner_text"
-        android:prompt="@string/backgroundOptionsName"
-        android:entries="@array/textColorFilterNames"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@id/textColorText"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/colorDetection"
-        android:text="Color Detection"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@id/spinner_text"
-        android:onClick="colorDetectionClicked"/>
-
-
-
-
+        android:layout_alignBottom="@+id/show_camera_activity_java_surface_view"
+        android:layout_centerInParent="true"
+        android:id="@+id/CameraZoomControls"/>
 
 </RelativeLayout>
