--- a/app/src/main/res/layout/show_camera.xml
+++ b/app/src/main/res/layout/show_camera.xml
@@ -31,7 +31,7 @@
             android:layout_height="match_parent"
             android:layout_toRightOf="@id/settingsButton"
             android:layout_alignParentTop="true"
-            android:text="BackGround Color"
+            android:text="Color Filter:"
             android:background="@color/darkGray"
             android:layout_weight="1"
             android:gravity="center"/>
